--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1031,62 +1031,6 @@ button.primaryContained:hover {
    background: #9201A8;
  }
  
- .confirmsaran {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 80%;
-  min-width: 280px;
-  max-width: 500px;
-  height: auto;
-  background: #E2E2E2;
-  border-radius: 10px;
-  padding: 0;
-  margin: 0;
-  border-top: 1px solid white;
-  animation: fade 1s ease 1 forwards;
-}
-.confirmsaran.hide{
-  display: none;
-}
-.confirmsaran h1 {
-  text-align: center;
-  font-size: 1.2rem;
-  margin: 1.5rem 1rem 0.5rem;
-}
-.confirmsaran p {
-  text-align: center;
-  font-size: 1rem;
-  margin: 0 2rem 4.5rem;
-}
-.confirmsaran button {
-  background: transparent;
-  border: none;
-  color: #1678E5;
-  height: 3rem;
-  font-size: 1rem;
-  width: 50%;
-  position: absolute;
-  bottom: 0;
-  cursor: pointer;
-}
-.confirmsaran button:nth-of-type(1) {
-  border-top: 1px solid #B4B4B4;
-  border-right: 1px solid #B4B4B4;
-  left: 0;
-  border-radius: 0 0 0 10px;
-}
-.confirmsaran button:nth-of-type(2) {
-  border-top: 1px solid #B4B4B4;
-  right: 0;
-  border-radius: 0 0 10px 0;
-}
-.confirmsaran button:focus,
-.confirmsaran button:hover {
-  font-weight: bold;
-  background: #EFEFEF;
-}
-.confirmsaran button:active {
-  background: #D6D6D6;
+.researcher{
+   /*border: 1px solid;*/
 }
