--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Survey Pengetahuan Perkembangan Anak</title>
+	<title>TanyaMandeh - Survey Pengetahuan Perkembangan Anak</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="ie=edge" charset="UTF-8">
 	<link rel="stylesheet" href="/static/css/style.css?{% now 'U' %}">
@@ -33,7 +33,7 @@
 		<p>Jika ada pertanyaan bisa menghubungi email : <b>siskaoktari@med.unand.ac.id</b></p><br>
 		<h4>Tim Peneliti : </h4><br><br>
 		<div class="clearfix">
-			<img class="img-home" src="static/img/anonym-modified.png" alt="">
+			<img class="img-home" src="static/img/siska-modified.png" width="180" height="180" alt="Siska Oktari, M.Psi.,Psikolog">
 			<div class="research">
 				<div></div><div><br></div><div></div>
 				<div></div><div><p>Siska Oktari, M.Psi.,Psikolog</p></div><div></div>
@@ -41,7 +41,7 @@
 			</div>
 		</div>
 		<div class="clearfix">
-			<img class="img-home" src="static/img/anonym-modified.png" alt="">
+			<img class="img-home" src="static/img/nelia-modified.png" width="180" height="180" alt="Nelia Afriyeni, S.Psi.,M.A">
 			<div class="research">
 				<div></div><div><br></div><div></div>
 				<div></div><div><p>Nelia Afriyeni, S.Psi.,M.A</p></div><div></div>
@@ -50,7 +50,7 @@
 			
 		</div>
 		<div class="clearfix">
-			<img class="img-home" src="static/img/anonym-modified.png" alt="">
+			<img class="img-home" src="static/img/rozi.jpg" width="180" height="180" alt="Dr. Rozi Sastra Purna, M.Psi.,Psikolog">
 			<div class="research">
 				<div></div><div></div><div></div>
 				<div></div><div><p>Dr. Rozi Sastra Purna, M.Psi.,Psikolog </p></div><div></div>
