add contact.html and update header

--- a/templates/about.html
+++ b/templates/about.html
@@ -13,10 +13,10 @@
 	<div class="nav-box hide">
 		<nav>
 	      <ul id="floatleft">
-	          <li><a href="/" onclick="goToHome()">Home</a></li>
+	          <li><a href="/" onclick="goToHome()">TanyaMandeh</a></li>
 	      </ul>
 	      <ul id="floatright">
-	      	  <li><a href="about/" class="active">About</a></li>
+	      	  <li><a href="#" class="active">About</a></li>
 	          <li><a href="../contact/">Contact</a></li>
 	      </ul>
 	   </nav> 
@@ -59,7 +59,7 @@
 	</div>
 	<!-- Footer -->
 	<footer>
-       <p>Copyright &copy; 2021, Andi Fathul Mukminin</p>
+       <p>Copyright &copy; 2021, PsikologiUnand</p>
     </footer>
 <script src="{% static 'js/question.js' %}"></script>
 <script src="{% static 'js/app-edit.js' %}"></script>
