--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -14,7 +14,7 @@
 	<div class="nav-box hide">
 		<nav>
 	      <ul id="floatleft">
-	          <li><a href="/" class="active" onclick="goToHome()">Home</a></li>
+	          <li><a href="/" class="active" onclick="goToHome()">TanyaMandeh</a></li>
 	      </ul>
 	      <ul id="floatright">
 	      	  <li><a href="about/">About</a></li>
@@ -363,7 +363,7 @@
 
 	<!-- Footer -->
 	<footer>
-       <p>Copyright &copy; 2021, Andi Fathul Mukminin</p>
+       <p>Copyright &copy; 2021, PsikologiUnand</p>
     </footer>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="{% static 'js/question-real.js' %}"></script>
