--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Merienda:wght@400;700&family=Rampart+One&display=swap');
 body{
 	margin: 0;
 	font-size: 16px;
@@ -403,7 +404,9 @@ label {
 /*Nav*/
 
 nav{
-    font-family: 'Montserrat', sans-serif;
+    /*font-family: 'Montserrat', sans-serif;
+    font-family: 'Rampart One', cursive;*/
+    font-family: 'Merienda', cursive;
     width: 100%;
     height: 60px;
     background-image: url("../img/header.jpg");
@@ -450,7 +453,7 @@ nav ul li a{
 }
 
 .active{
-    color: #fff;
+    color: #000;
     font-weight: bold;
 }
 
