--- a/templates/contact.html
+++ b/templates/contact.html
@@ -12,18 +12,46 @@
 	<div class="nav-box hide">
 		<nav>
 	      <ul id="floatleft">
-	          <li><a href="/" class="active" onclick="goToHome()">Home</a></li>
+	          <li><a href="/" onclick="goToHome()">TanyaMandeh</a></li>
 	      </ul>
 	      <ul id="floatright">
 	      	  <li><a href="../about/">About</a></li>
-	          <li><a href="contact/">Contact</a></li>
+	          <li><a href="#" class="active">Contact</a></li>
 	      </ul>
 	   </nav> 
 	</div>
 
+	<div class="custom-box">
+		<h2 style="text-align: center;">Hubungi kami melalui</h2><br><br>
+		<table class="researcher">
+			<tr>
+				<td><img class="img-home" src='{% static "img/whatsapp.png" %}' width="70" height="70" alt="Whatsapp"></td>
+				<td colspan="2">
+					<h3 style="text-align: center;">Whatsapp</h3>
+					<p align="justify" style="text-align: center;">081266238581</p>
+				</td>
+			</tr>
+			<tr>
+				<td><img class="img-home" src='{% static "img/email.png" %}' width="70" height="70" alt="Email"></td>
+				<td colspan="2">
+					<h3 style="text-align: center;">Email</h3>
+					<p align="justify" style="text-align: center;">siskaoktari@gmail.com</p>
+					<p align="justify" style="text-align: center;">siskaoktari@med.unand.ac.id</p>
+				</td>
+			</tr>
+			<tr>
+				<td><img class="img-home" src='{% static "img/Instagram.png" %}' width="70" height="70" alt="Instagram"></td>
+				<td colspan="2">
+					<h3 style="text-align: center;">Instagram</h3>
+					<p align="justify" style="text-align: center;">@siskaoktari24</p>
+				</td>
+			</tr>
+		</table>
+	</div>
+
 	<!-- Footer -->
 	<footer>
-       <p>Copyright &copy; 2021, Andi Fathul Mukminin</p>
+       <p>Copyright &copy; 2021, PsikologiUnand</p>
     </footer>
 <script src="{% static 'js/question.js' %}"></script>
 <script src="{% static 'js/app-edit.js' %}"></script>
