change most bg and finishing

--- a/templates/about.html
+++ b/templates/about.html
@@ -27,7 +27,7 @@
 			<tr>
 				<td><img class="img-home" src='{% static "img/siska-modified.png" %}' width="180" height="180" alt="Siska Oktari, M.Psi.,Psikolog"></td>
 				<td colspan="2"><h4>Ketua Penelitian</h4>
-				<p align="justify"><strong>Siska Oktari, M.Psi.,Psikolog</strong> merupakan staff dosen Program Studi Psikologi Fakultas Kedokteran Universitas Andalas. Selain itu, beliau juga merupakan psikolog di bidang klinis anak dan remaja. Saat ini, beliau fokus penelitian dan pemberian intervensi pada bidang perkembangan dan  Kesehatan mental khususnya pada anak dan remaja.</p></td>
+				<p align="justify"><strong>Siska Oktari, M.Psi.,Psikolog</strong> merupakan staff dosen Program Studi Psikologi Fakultas Kedokteran Universitas Andalas. Selain itu, beliau juga merupakan psikolog di bidang klinis anak dan remaja. Saat ini, beliau fokus penelitian dan pemberian intervensi pada bidang perkembangan dan kesehatan mental khususnya pada anak dan remaja.</p></td>
 			</tr>
 			<tr>
 				<td><img class="img-home" src='{% static "img/nelia-modified.png" %}' width="180" height="180" alt="Nelia Afriyeni, S.Psi.,M.A"></td>
