--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -30,13 +30,13 @@
 		<p align="justify">Penelitian ini bertujuan untuk membantu para orang tua untuk melakukan asesmen diri mengenai pengetahuan yang dimiliki terkait perkembangan anak khususnya usia 0-2 tahun. Semakin baik pengetahuan yang dimiliki oleh orang tua maka juga akan berdampak baik kepada anak melalui stimulasi yang diberikan.</p><br>
 		<p align="justify">Tugas Ayah/Bunda adalah memilih salah satu jawaban yang tersedia sesuai dengan yang Ayah/Bunda ketahui. Informasi mengenai orang tua yang kami peroleh selama proses penelitian ini akan dijaga kerahasiaannya dan hanya digunakan untuk kepentingan penelitian.</p><br>
 		<p>Atas partisipasi dan waktu yang telah diberikan, kami ucapkan terimakasih.</p><br>
-		<p>Jika ada pertanyaan bisa menghubungi email : <b>siskaoktari@med.unand.ac.id</b></p><br>
-		<h4>Tim Peneliti : </h4><br><br>
+		<p>Jika ada pertanyaan bisa menghubungi email : <b>siskaoktari@med.unand.ac.id</b>. Untuk lebih lengkapnya dapat melihat <a href="contact/">halaman kontak kami</a></p><br>
+		<h4 style="text-align: center;"><a href="about/">Tim Peneliti : </a></h4><br><br>
 		<div class="clearfix">
 			<img class="img-home" src="static/img/siska-modified.png" width="180" height="180" alt="Siska Oktari, M.Psi.,Psikolog">
 			<div class="research">
 				<div></div><div><br></div><div></div>
-				<div></div><div><p>Siska Oktari, M.Psi.,Psikolog</p></div><div></div>
+				<div></div><div><p><strong>Siska Oktari, M.Psi.,Psikolog</strong></p></div><div></div>
 				<div></div><div></div><div></div>
 			</div>
 		</div>
@@ -44,7 +44,7 @@
 			<img class="img-home" src="static/img/nelia-modified.png" width="180" height="180" alt="Nelia Afriyeni, S.Psi.,M.A">
 			<div class="research">
 				<div></div><div><br></div><div></div>
-				<div></div><div><p>Nelia Afriyeni, S.Psi.,M.A</p></div><div></div>
+				<div></div><div><p><strong>Nelia Afriyeni, S.Psi.,M.A</strong></p></div><div></div>
 				<div></div><div></div><div></div>
 			</div>
 			
@@ -53,7 +53,7 @@
 			<img class="img-home" src="static/img/rozi.jpg" width="180" height="180" alt="Dr. Rozi Sastra Purna, M.Psi.,Psikolog">
 			<div class="research">
 				<div></div><div></div><div></div>
-				<div></div><div><p>Dr. Rozi Sastra Purna, M.Psi.,Psikolog </p></div><div></div>
+				<div></div><div><p><strong>Dr. Rozi Sastra Purna, M.Psi.,Psikolog </strong></p></div><div></div>
 				<div></div><div></div><div></div>
 			</div>
 			
@@ -179,7 +179,7 @@
 	      </select>
 	      <label for="nohp"><b>Nomor Hp</b></label>
 	      <input type="tel" id="nohp" name="nohp" placeholder="081234567890" pattern="[0-9]{10,}" required>
-	      <p></p>
+	      <p class="checkhp"></p>
 	      <br><br>
 	      <button data-url='{% url "home" %}' type="submit" class="btn" onclick="showInstruction()" id="submit">Instruksi Kuis</button>
 	    </form>
