--- a/static/css/style.css
+++ b/static/css/style.css
@@ -14,46 +14,52 @@ body{
 	min-height: 100vh;
    display: flex;
    flex-direction: column;
-   animation: chbg 600s infinite alternate;
+   animation: chbg 600s infinite normal;
    animation-timing-function: ease-in-out;
    -webkit-animation-timing-function: ease-in-out;
 }
 @keyframes chbg{
    0%{
-      background-image: url("../img/bg1.jpg");
+      background-image: url("../img/bg01.jpg");
    }
    7%{
-      background-image: url("../img/bg2.jpg");
+      background-image: url("../img/bg02.jpg");
    }
    14%{
-      background-image: url("../img/bg3.jpg");
+      background-image: url("../img/bg03.jpg");
    }
    21%{
-      background-image: url("../img/bg4.jpg");
+      background-image: url("../img/bg04.jpg");
    }
    28%{
-      background-image: url("../img/bg5.jpg");
+      background-image: url("../img/bg05.jpg");
    }
-   35%{
-      background-image: url("../img/bg6.jpg");
+   36%{
+      background-image: url("../img/bg06.jpg");
    }
-   42%{
-      background-image: url("../img/bg7.jpg");
+   44%{
+      background-image: url("../img/bg07.jpg");
    }
-   50%{
-      background-image: url("../img/bg8.jpg");
+   51%{
+      background-image: url("../img/bg08.jpg");
    }
    60%{
-      background-image: url("../img/bg9.jpg");
+      background-image: url("../img/bg09.jpg");
    }
-   70%{
+   68%{
       background-image: url("../img/bg10.jpg");
    }
-   80%{
+   76%{
       background-image: url("../img/bg11.jpg");
    }
-   90%{
+   84%{
       background-image: url("../img/bg12.jpg");
+   }
+   92%{
+      background-image: url("../img/bg13.jpg");
+   }
+   100%{
+      background-image: url("../img/bg14.jpg");
    }
 }
 
