--- a/templates/about.html
+++ b/templates/about.html
@@ -32,12 +32,12 @@
 			<tr>
 				<td><img class="img-home" src='{% static "img/nelia-modified.png" %}' width="180" height="180" alt="Nelia Afriyeni, S.Psi.,M.A"></td>
 				<td colspan="2"><h4>Anggota Penelitian</h4>
-				<p align="justify"><strong>Nelia Afriyeni, S.Psi.,M.A</strong> merupakan staff dosen Program Studi Psikologi Fakultas Kedokteran Universitas Andalas. Beliau merupakan seorang ilmuwan psikologi di bidang klinis. Selain itu, beliau juga mengampu mata kuliah yang berkaitan dengan statistic dan psikometri.</p></td>
+				<p align="justify"><strong>Nelia Afriyeni, S.Psi.,M.A</strong> merupakan staff dosen Program Studi Psikologi Fakultas Kedokteran Universitas Andalas. Beliau merupakan seorang ilmuwan psikologi di bidang klinis. Selain itu, beliau juga mengampu mata kuliah yang berkaitan dengan statistik dan psikometri.</p></td>
 			</tr>
 			<tr>
 				<td><img class="img-home" src='{% static "img/rozi.jpg" %}' height="180" alt="Dr. Rozi Sastra Purna, M.Psi.,Psikolog"></td>
 				<td colspan="2"><h4>Anggota Penelitian</h4>
-				<p align="justify"><strong>Dr. Rozi Sastra Purna, M.Psi.,Psikolog</strong> merupakan dosen di Program Studi Psikologi Fakultas Kedokteran Universitas Andalas. Selain itu, beliau juga merupakan seorang psikolog di bidang Pendidikan. Beliau fokus pada penelitian terkait dengan Pendidikan anak usia dini, regulasi emosi.</p></td>
+				<p align="justify"><strong>Dr. Rozi Sastra Purna, M.Psi.,Psikolog</strong> merupakan dosen di Program Studi Psikologi Fakultas Kedokteran Universitas Andalas. Selain itu, beliau juga merupakan seorang psikolog di bidang pendidikan. Beliau fokus pada penelitian terkait dengan pendidikan anak usia dini, regulasi emosi.</p></td>
 			</tr>
 			<tr>
 				<td><img class="img-home" src='{% static "img/eva-modified.png" %}' height="180" alt="Evantrida Mailyza Musly, M.Psi.,Psikolog "></td>
