--- a/templates/contact.html
+++ b/templates/contact.html
@@ -40,7 +40,7 @@
 				</td>
 			</tr>
 			<tr>
-				<td><img class="img-home" src='{% static "img/Instagram.png" %}' width="70" height="70" alt="Instagram"></td>
+				<td><img class="img-home" src='{% static "img/instagram.png" %}' width="70" height="70" alt="Instagram"></td>
 				<td colspan="2">
 					<h3 style="text-align: center;">Instagram</h3>
 					<p align="justify" style="text-align: center;">@siskaoktari24</p>
