--- a/templates/contact.html
+++ b/templates/contact.html
@@ -51,7 +51,7 @@
 
 	<!-- Footer -->
 	<footer>
-       <p>Copyright &copy; 2021, PsikologiUnand</p>
+       <p>Copyright &copy; 2021, siskaoktaripsikologiunand</p>
     </footer>
 <script src="{% static 'js/question.js' %}"></script>
 <script src="{% static 'js/app-edit.js' %}"></script>
