chg title about contact

--- a/templates/about.html
+++ b/templates/about.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>TanyaMandeh - Survey Pengetahuan Perkembangan Anak</title>
+	<title>TanyaMandeh - Pengukuran tingkat pengetahuan orang tua tentang perkembangan anak</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="ie=edge" charset="UTF-8">
 	<link rel="stylesheet" href="/static/css/style.css?{% now 'U' %}">
