--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -309,7 +309,7 @@
 		    </div>
 		  </div>
 		</div>
-		<button type="button" class="btn" onclick="tryAgainQuiz()">Coba Lagi</button>
+		<!--<button type="button" class="btn" onclick="tryAgainQuiz()">Coba Lagi</button>-->
 		<button type="button" class="btn" onclick="goToHome()">Home</button>
 	</div>
 	<!-- Comment Box -->
